# proteus

./: .gitignore  pyproject.toml
examples/: single_talker.py  single_teller.py
src/proteus/: __init__.py  config.py  history_store.py  manager.py  spec.py  talker.py  teller.py
src/proteus/llms/: __init__.py  base.py  dashscope.py  gemini.py  llama_cpp.py  openai.py  replicate_mixtral_ins.py  replicate_qwen_14b.py  testback.py
src/proteus/manager/: __init__.py  history_store.py  manager.py  talker_store.py
src/proteus/server/: cli_server.py  factory.py
src/proteus/spec/: __init__.py
src/proteus/storages/: __init__.py  history_store.py
src/proteus/talker/: __init__.py
src/proteus/utils/logger/: __init__.py
src/proteus/utils/spec/: __init__.py
tests/: test_history_store.py
tests/file_history_store/: test.jsonl
